# CMake-SBOM-Builder

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
.github/workflows/: cmake-multi-platform.yml  publish.yml
cmake/: sbom.cmake  testing.cmake
doc/: full_signature.md
example/: CMakeLists.txt  example.cpp
example/cmake/: deps.cmake
example/output/: Example-sbom-0.2.1.spdx  Example-sbom-0.3.0.spdx
test/: CMakeLists.txt  dir.cmake  external.cmake  file.cmake  full_doc.cmake  input_doc.cmake  input_doc.spdx.in  minimal.cmake  minimal2.cmake  package.cmake  target.cmake
test/unit/: version_extract.cmake  version_generate.cmake
test/unit/version_generate/: CMakeLists.txt
